--- a/FootballMan/app/src/main/res/menu/menu.xml
+++ b/FootballMan/app/src/main/res/menu/menu.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:android="http://schemas.android.com/apk/res/android">
-
+    <item android:title="@string/export"
+        android:id="@+id/export_data">
+    </item>
     <!--<item android:title="@string/add"-->
         <!--android:id="@+id/test"-->
         <!--app:showAsAction="always"/>-->
